// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutEngine Visual Snapshots RC filter circuit 1`] = `
Object {
  "children": Array [
    Object {
      "children": undefined,
      "edges": undefined,
      "height": 20,
      "id": "test:Filter.C1",
      "labels": Array [
        Object {
          "height": 20,
          "text": "100nF",
          "textAlign": "left",
          "width": 128,
          "x": 40,
          "y": 2,
        },
      ],
      "ports": Array [
        Object {
          "id": "test:Filter.C1.P1",
          "netId": "net_out",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "NORTH",
          },
        },
        Object {
          "id": "test:Filter.C1.P2",
          "netId": "net_gnd",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "SOUTH",
          },
        },
      ],
      "properties": Object {
        "elk.nodeLabels.placement": "",
        "elk.nodeSize.constraints": "MINIMUM_SIZE",
        "elk.nodeSize.minimum": "(40, 20)",
        "elk.padding": "[top=10, left=10, bottom=10, right=10]",
        "elk.portConstraints": "FIXED_SIDE",
      },
      "type": "capacitor",
      "width": 40,
      "x": 50,
      "y": 50,
    },
    Object {
      "children": undefined,
      "edges": undefined,
      "height": 50,
      "id": "net_gnd_gnd_test:Filter_C1",
      "labels": Array [],
      "netId": "net_gnd",
      "netReferenceType": "ground",
      "ports": Array [
        Object {
          "height": 0,
          "id": "net_gnd_gnd_test:Filter_C1.port",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.side": "NORTH",
          },
          "width": 0,
          "x": 15,
          "y": 0,
        },
      ],
      "properties": Object {
        "elk.nodeLabels.placement": "",
        "elk.nodeSize.constraints": "MINIMUM_SIZE",
        "elk.nodeSize.minimum": "(30, 50)",
        "elk.padding": "[top=0, left=0, bottom=0, right=0]",
        "elk.portConstraints": "FIXED_POS",
      },
      "type": "net_reference",
      "width": 30,
      "x": 50,
      "y": 50,
    },
    Object {
      "children": undefined,
      "edges": undefined,
      "height": 30,
      "id": "test:Filter.R1",
      "labels": Array [
        Object {
          "height": 25,
          "text": "1k",
          "textAlign": "left",
          "width": 128,
          "x": 35,
          "y": 4,
        },
      ],
      "ports": Array [
        Object {
          "id": "test:Filter.R1.P1",
          "netId": "net_in",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "NORTH",
          },
        },
        Object {
          "id": "test:Filter.R1.P2",
          "netId": "net_out",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "SOUTH",
          },
        },
      ],
      "properties": Object {
        "elk.nodeLabels.placement": "INSIDE",
        "elk.nodeSize.constraints": "MINIMUM_SIZE",
        "elk.nodeSize.minimum": "(40, 30)",
        "elk.padding": "[top=10, left=10, bottom=10, right=10]",
        "elk.portConstraints": "FIXED_SIDE",
      },
      "type": "resistor",
      "width": 40,
      "x": 200,
      "y": 50,
    },
  ],
  "edges": Array [
    Object {
      "id": "test:Filter.C1.P2-net_gnd_gnd_test:Filter_C1",
      "junctionPoints": undefined,
      "netId": "net_gnd",
      "sections": undefined,
      "sourceComponentRef": "test:Filter.C1",
      "sources": Array [
        "test:Filter.C1.P2",
      ],
      "targetComponentRef": "net_gnd_gnd_test:Filter_C1",
      "targets": Array [
        "net_gnd_gnd_test:Filter_C1.port",
      ],
    },
    Object {
      "id": "test:Filter.C1.P1-test:Filter.R1.P2",
      "junctionPoints": undefined,
      "netId": "net_out",
      "properties": Object {
        "elk.layered.priority.direction": "10",
        "elk.layered.priority.shortness": "10",
      },
      "sections": undefined,
      "sourceComponentRef": "test:Filter.C1",
      "sources": Array [
        "test:Filter.C1.P1",
      ],
      "targetComponentRef": "test:Filter.R1",
      "targets": Array [
        "test:Filter.R1.P2",
      ],
    },
  ],
  "id": "test:Filter",
}
`;

exports[`LayoutEngine Visual Snapshots hierarchical module with sub-modules 1`] = `
Object {
  "children": Array [
    Object {
      "children": undefined,
      "edges": undefined,
      "height": 20,
      "id": "test:System.PowerSupply.C1",
      "labels": Array [
        Object {
          "height": 20,
          "text": "10uF",
          "textAlign": "left",
          "width": 128,
          "x": 40,
          "y": 2,
        },
      ],
      "ports": Array [
        Object {
          "id": "test:System.PowerSupply.C1.P1",
          "netId": "ps_vin",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "NORTH",
          },
        },
        Object {
          "id": "test:System.PowerSupply.C1.P2",
          "netId": "gnd",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "SOUTH",
          },
        },
      ],
      "properties": Object {
        "elk.nodeLabels.placement": "",
        "elk.nodeSize.constraints": "MINIMUM_SIZE",
        "elk.nodeSize.minimum": "(40, 20)",
        "elk.padding": "[top=10, left=10, bottom=10, right=10]",
        "elk.portConstraints": "FIXED_SIDE",
      },
      "type": "capacitor",
      "width": 40,
      "x": 50,
      "y": 50,
    },
    Object {
      "children": undefined,
      "edges": undefined,
      "height": 50,
      "id": "gnd_gnd_test:System_PowerSupply_C1",
      "labels": Array [],
      "netId": "gnd",
      "netReferenceType": "ground",
      "ports": Array [
        Object {
          "height": 0,
          "id": "gnd_gnd_test:System_PowerSupply_C1.port",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.side": "NORTH",
          },
          "width": 0,
          "x": 15,
          "y": 0,
        },
      ],
      "properties": Object {
        "elk.nodeLabels.placement": "",
        "elk.nodeSize.constraints": "MINIMUM_SIZE",
        "elk.nodeSize.minimum": "(30, 50)",
        "elk.padding": "[top=0, left=0, bottom=0, right=0]",
        "elk.portConstraints": "FIXED_POS",
      },
      "type": "net_reference",
      "width": 30,
      "x": 50,
      "y": 50,
    },
    Object {
      "children": undefined,
      "edges": undefined,
      "height": 20,
      "id": "test:System.PowerSupply.C2",
      "labels": Array [
        Object {
          "height": 20,
          "text": "100nF",
          "textAlign": "left",
          "width": 128,
          "x": 40,
          "y": 2,
        },
      ],
      "ports": Array [
        Object {
          "id": "test:System.PowerSupply.C2.P1",
          "netId": "ps_vout",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "NORTH",
          },
        },
        Object {
          "id": "test:System.PowerSupply.C2.P2",
          "netId": "gnd",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "SOUTH",
          },
        },
      ],
      "properties": Object {
        "elk.nodeLabels.placement": "",
        "elk.nodeSize.constraints": "MINIMUM_SIZE",
        "elk.nodeSize.minimum": "(40, 20)",
        "elk.padding": "[top=10, left=10, bottom=10, right=10]",
        "elk.portConstraints": "FIXED_SIDE",
      },
      "type": "capacitor",
      "width": 40,
      "x": 200,
      "y": 50,
    },
    Object {
      "children": undefined,
      "edges": undefined,
      "height": 50,
      "id": "gnd_gnd_test:System_PowerSupply_C2",
      "labels": Array [],
      "netId": "gnd",
      "netReferenceType": "ground",
      "ports": Array [
        Object {
          "height": 0,
          "id": "gnd_gnd_test:System_PowerSupply_C2.port",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.side": "NORTH",
          },
          "width": 0,
          "x": 15,
          "y": 0,
        },
      ],
      "properties": Object {
        "elk.nodeLabels.placement": "",
        "elk.nodeSize.constraints": "MINIMUM_SIZE",
        "elk.nodeSize.minimum": "(30, 50)",
        "elk.padding": "[top=0, left=0, bottom=0, right=0]",
        "elk.portConstraints": "FIXED_POS",
      },
      "type": "net_reference",
      "width": 30,
      "x": 200,
      "y": 50,
    },
    Object {
      "children": undefined,
      "edges": undefined,
      "height": 30,
      "id": "test:System.Sensor.R1",
      "labels": Array [
        Object {
          "height": 25,
          "text": "4.7k",
          "textAlign": "left",
          "width": 128,
          "x": 35,
          "y": 4,
        },
      ],
      "ports": Array [
        Object {
          "id": "test:System.Sensor.R1.P1",
          "netId": "sensor_pull",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "NORTH",
          },
        },
        Object {
          "id": "test:System.Sensor.R1.P2",
          "netId": "sensor_out",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "SOUTH",
          },
        },
      ],
      "properties": Object {
        "elk.nodeLabels.placement": "INSIDE",
        "elk.nodeSize.constraints": "MINIMUM_SIZE",
        "elk.nodeSize.minimum": "(40, 30)",
        "elk.padding": "[top=10, left=10, bottom=10, right=10]",
        "elk.portConstraints": "FIXED_SIDE",
      },
      "type": "resistor",
      "width": 40,
      "x": 350,
      "y": 50,
    },
  ],
  "edges": Array [
    Object {
      "id": "test:System.PowerSupply.C1.P2-gnd_gnd_test:System_PowerSupply_C1",
      "junctionPoints": undefined,
      "netId": "gnd",
      "sections": undefined,
      "sourceComponentRef": "test:System.PowerSupply.C1",
      "sources": Array [
        "test:System.PowerSupply.C1.P2",
      ],
      "targetComponentRef": "gnd_gnd_test:System_PowerSupply_C1",
      "targets": Array [
        "gnd_gnd_test:System_PowerSupply_C1.port",
      ],
    },
    Object {
      "id": "test:System.PowerSupply.C2.P2-gnd_gnd_test:System_PowerSupply_C2",
      "junctionPoints": undefined,
      "netId": "gnd",
      "sections": undefined,
      "sourceComponentRef": "test:System.PowerSupply.C2",
      "sources": Array [
        "test:System.PowerSupply.C2.P2",
      ],
      "targetComponentRef": "gnd_gnd_test:System_PowerSupply_C2",
      "targets": Array [
        "gnd_gnd_test:System_PowerSupply_C2.port",
      ],
    },
  ],
  "id": "test:System",
}
`;

exports[`LayoutEngine Visual Snapshots simple resistor divider circuit 1`] = `
Object {
  "children": Array [
    Object {
      "children": undefined,
      "edges": undefined,
      "height": 30,
      "id": "test:Board.R2",
      "labels": Array [
        Object {
          "height": 25,
          "text": "10k",
          "textAlign": "left",
          "width": 128,
          "x": 35,
          "y": 4,
        },
      ],
      "ports": Array [
        Object {
          "id": "test:Board.R2.P1",
          "netId": "net_vout",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "NORTH",
          },
        },
        Object {
          "id": "test:Board.R2.P2",
          "netId": "net_gnd",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "SOUTH",
          },
        },
      ],
      "properties": Object {
        "elk.nodeLabels.placement": "INSIDE",
        "elk.nodeSize.constraints": "MINIMUM_SIZE",
        "elk.nodeSize.minimum": "(40, 30)",
        "elk.padding": "[top=10, left=10, bottom=10, right=10]",
        "elk.portConstraints": "FIXED_SIDE",
      },
      "type": "resistor",
      "width": 40,
      "x": 50,
      "y": 50,
    },
    Object {
      "children": undefined,
      "edges": undefined,
      "height": 50,
      "id": "net_gnd_gnd_test:Board_R2",
      "labels": Array [],
      "netId": "net_gnd",
      "netReferenceType": "ground",
      "ports": Array [
        Object {
          "height": 0,
          "id": "net_gnd_gnd_test:Board_R2.port",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.side": "NORTH",
          },
          "width": 0,
          "x": 15,
          "y": 0,
        },
      ],
      "properties": Object {
        "elk.nodeLabels.placement": "",
        "elk.nodeSize.constraints": "MINIMUM_SIZE",
        "elk.nodeSize.minimum": "(30, 50)",
        "elk.padding": "[top=0, left=0, bottom=0, right=0]",
        "elk.portConstraints": "FIXED_POS",
      },
      "type": "net_reference",
      "width": 30,
      "x": 50,
      "y": 50,
    },
    Object {
      "children": undefined,
      "edges": undefined,
      "height": 30,
      "id": "test:Board.R1",
      "labels": Array [
        Object {
          "height": 25,
          "text": "10k",
          "textAlign": "left",
          "width": 128,
          "x": 35,
          "y": 4,
        },
      ],
      "ports": Array [
        Object {
          "id": "test:Board.R1.P1",
          "netId": "net_vin",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "NORTH",
          },
        },
        Object {
          "id": "test:Board.R1.P2",
          "netId": "net_vout",
          "properties": Object {
            "port.alignment": "CENTER",
            "port.anchor": "CENTER",
            "port.index": "0",
            "port.side": "SOUTH",
          },
        },
      ],
      "properties": Object {
        "elk.nodeLabels.placement": "INSIDE",
        "elk.nodeSize.constraints": "MINIMUM_SIZE",
        "elk.nodeSize.minimum": "(40, 30)",
        "elk.padding": "[top=10, left=10, bottom=10, right=10]",
        "elk.portConstraints": "FIXED_SIDE",
      },
      "type": "resistor",
      "width": 40,
      "x": 200,
      "y": 50,
    },
  ],
  "edges": Array [
    Object {
      "id": "test:Board.R2.P2-net_gnd_gnd_test:Board_R2",
      "junctionPoints": undefined,
      "netId": "net_gnd",
      "sections": undefined,
      "sourceComponentRef": "test:Board.R2",
      "sources": Array [
        "test:Board.R2.P2",
      ],
      "targetComponentRef": "net_gnd_gnd_test:Board_R2",
      "targets": Array [
        "net_gnd_gnd_test:Board_R2.port",
      ],
    },
    Object {
      "id": "test:Board.R1.P2-test:Board.R2.P1",
      "junctionPoints": undefined,
      "netId": "net_vout",
      "properties": Object {
        "elk.layered.priority.direction": "10",
        "elk.layered.priority.shortness": "10",
      },
      "sections": undefined,
      "sourceComponentRef": "test:Board.R1",
      "sources": Array [
        "test:Board.R1.P2",
      ],
      "targetComponentRef": "test:Board.R2",
      "targets": Array [
        "test:Board.R2.P1",
      ],
    },
  ],
  "id": "test:Board",
}
`;
